<resources>
    <string name="app_name">BancoSaqueApp</string>
    <string name="lblDeposito">Valor a Depositar:</string>
    <string name="lblSaldo">Saldo:</string>
    <string name="valorSaldoInicial">0</string>
    <string name="valorDeposito"></string>
    <string name="lblSaque">Valor a Sacar:</string>
    <string name="btnDepositar">Depositar</string>
    <string name="btnSaqueMax">Saque Máximo</string>
    <string name="btnSaqueDef">Saque Definido</string>
    <string name="txtSaque"></string>
    <string name="lblNotas100">Notas de R$100,00:</string>
    <string name="txtnNotas100">0</string>
    <string name="mostrar_historico">Mostrar Historico</string>
</resources>
