<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/lblSaldo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="50dp"
            android:text="@string/lblSaldo"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtSaldo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:text="@string/valorSaldoInicial"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/lblSaldo" />

        <LinearLayout
            android:id="@+id/LinearInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="38dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblSaldo">


            <LinearLayout
                android:id="@+id/LinearDepositar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lblSaldo">

                <TextView
                    android:id="@+id/lblDeposito"
                    android:layout_width="wrap_content"
                    android:layout_height="34dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/lblDeposito"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent" />

                <EditText
                    android:id="@+id/txtDeposito"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:text="@string/valorDeposito"
                    android:textAlignment="textEnd"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="@id/LinearDepositar"

                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/LinearSacar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/lblSaque"
                    android:layout_width="wrap_content"
                    android:layout_height="34dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/lblSaque"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/LinearInput"
                    app:layout_constraintStart_toStartOf="@id/LinearInput" />

                <EditText
                    android:id="@+id/txtSaque"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:inputType="numberDecimal"
                    android:text="@string/txtSaque"
                    android:textAlignment="textEnd"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@id/LinearDepositar"
                    app:layout_constraintEnd_toEndOf="@id/LinearDepositar" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/lblNotas5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="Notas de R$5,00:"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblNotas10" />

        <TextView
            android:id="@+id/txtnNotas5"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@null"
            android:text="0"
            android:textAlignment="textEnd"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtnNotas10" />

        <TextView
            android:id="@+id/lblNotas10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="Notas de R$10,00:"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtnNotas20" />

        <TextView
            android:id="@+id/txtnNotas10"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@null"
            android:text="0"
            android:textAlignment="textEnd"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtnNotas20" />

        <TextView
            android:id="@+id/lblNotas20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:text="Notas de R$20,00:"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblNotas50" />

        <TextView
            android:id="@+id/txtnNotas20"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@null"
            android:text="0"
            android:textAlignment="textEnd"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtnNotas50" />

        <TextView
            android:id="@+id/lblNotas50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20sp"
            android:text="Notas de R$50,00:"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lblNotas100" />

        <TextView
            android:id="@+id/txtnNotas50"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:background="@null"
            android:text="@string/txtnNotas100"
            android:textAlignment="textEnd"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtnNotas100" />

        <TextView
            android:id="@+id/lblNotas100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/lblNotas100"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSaqueDefinido" />

        <TextView
            android:id="@+id/txtnNotas100"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:background="@null"
            android:text="@string/txtnNotas100"
            android:textAlignment="textEnd"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSaqueDefinido" />


        <Button
            android:id="@+id/btnDepositar"
            android:layout_height="40dp"
            android:layout_width="160dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="15dp"
            android:minWidth="120dp"
            android:text="@string/btnDepositar"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/LinearInput" />

        <Button
            android:id="@+id/btnSaqueMax"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="18dp"
            android:text="@string/btnSaqueMax"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/LinearInput" />

        <Button
            android:id="@+id/btnSaqueDefinido"
            android:layout_width="160dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/btnSaqueDef"

            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/btnDepositar" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.50"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/ViewNotas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="lblNotas100,lblNotas50,lblNotas20,lblNotas10,lblNotas5,txtnNotas100,txtnNotas50,txtnNotas20,txtnNotas10,txtnNotas5" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>